--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16852,5 +16852,5 @@
         background-color: transparent !important;
     } */
     .eZFVZ.Ny5lGc.RDPZE.oJeWuf {
-        background-color: #222; 
+        background-color: #222 !important; 
     }
