--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16854,3 +16854,6 @@
     .eZFVZ:hover .Ny5lGc .oJeWuf {
         background-color: #222 !important; 
     }
+    .eZFVZ .Ny5lGc.RDPZE .oJeWuf {
+        background-color: #000 !important;
+    }
