--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16857,3 +16857,6 @@
     div.eZFVZ .Ny5lGc.RDPZE .oJeWuf {
         background-color: #222;
     }
+    div.VfPpkd-xl07Ob-XxIAqe {
+        background-color: #000;
+    }
