--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16860,3 +16860,6 @@
     div.VfPpkd-xl07Ob-XxIAqe {
         background-color: #000;
     }
+    ul.q6oraf ul.VfPpkd-StrnGf-rymPhb {
+        color: #fff;
+    }
