--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16860,6 +16860,6 @@
     div.VfPpkd-xl07Ob-XxIAqe {
         background-color: #000;
     }
-    ul.q6oraf ul.VfPpkd-StrnGf-rymPhb {
+    ul.q6oraf .VfPpkd-StrnGf-rymPhb {
         color: #fff;
     }
