--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16861,7 +16861,7 @@
         background-color: #000;
     }
     .q6oraf .VfPpkd-StrnGf-rymPhb {
-        color: #fff;
+        color: #fff !important;
     }
 /*
  * TODO: Fix respond to question text field
