--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16863,6 +16863,9 @@
     .q6oraf .VfPpkd-StrnGf-rymPhb {
         color: #fff !important;
     }
+    :not(.VfPpkd-StrnGf-rymPhb-ibnC6b-OWXEXe-OWB6Me).VfPpkd-StrnGf-rymPhb-ibnC6b .VfPpkd-StrnGf-rymPhb-pZXsl::before, :not(.VfPpkd-StrnGf-rymPhb-ibnC6b-OWXEXe-OWB6Me).VfPpkd-StrnGf-rymPhb-ibnC6b .VfPpkd-StrnGf-rymPhb-pZXsl::after {
+        background-color: var(--mdc-ripple-color,#fff)
+    }
 /*
  * TODO: Fix respond to question text field
  */
