--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16864,7 +16864,7 @@
         color: #fff !important;
     }
     :not(.VfPpkd-StrnGf-rymPhb-ibnC6b-OWXEXe-OWB6Me).VfPpkd-StrnGf-rymPhb-ibnC6b .VfPpkd-StrnGf-rymPhb-pZXsl::before, :not(.VfPpkd-StrnGf-rymPhb-ibnC6b-OWXEXe-OWB6Me).VfPpkd-StrnGf-rymPhb-ibnC6b .VfPpkd-StrnGf-rymPhb-pZXsl::after {
-        background-color: var(--mdc-ripple-color,#fff)
+        background-color: var(--mdc-ripple-color,#fff) !important;
     }
 /*
  * TODO: Fix respond to question text field
