--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -5478,13 +5478,13 @@
         color: #5f6368
     }
     
-    .asQXV-FGzYL {
+    .asQXV-FGzYL { /* Class selection text; make an assignment */
         letter-spacing: .01785714em;
         font-family: 'Google Sans', Roboto, Arial, sans-serif;
         font-size: 0.875rem;
         font-weight: 400;
         line-height: 1.25rem;
-        color: #3c4043
+        color: #eee
     }
     
     .lYU7F {
