--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -5737,8 +5737,8 @@
         text-transform: none
     }
     
-    .cLpBac {
-        background: #f8f9fa;
+    .cLpBac { /* Some selection menus (For and Due) in create an assignment */
+        background: #111;
         padding: 12px 0
     }
     
@@ -8272,8 +8272,8 @@
     .UvHKof .fWf7qe:not(.RDPZE).u3bW4e .snByac,
     .UvHKof .HyS0Qd:not(.RDPZE).u3bW4e .snByac,
     .UvHKof .HyS0Qd input:not([disabled]):focus~.snByac,
-    .UvHKof .vnnr5e:not(.RDPZE).u3bW4e .snByac {
-        color: #202124
+    .UvHKof .vnnr5e:not(.RDPZE).u3bW4e .snByac { /* Create an assignment title box label when box in focus */
+        color: #878b90
     }
     
     .UvHKof .NqFm6:not(.RDPZE) .tWfTvb [role=option][aria-selected=true],
@@ -16854,8 +16854,8 @@
     div.eZFVZ:hover .Ny5lGc .oJeWuf {
         background-color: #000; 
     }
-    div.eZFVZ .Ny5lGc.RDPZE .oJeWuf {
-        background-color: #222;
+    div.eZFVZ .Ny5lGc.RDPZE .oJeWuf { /* Points selection background; create an assignment */
+        background-color: #111;
     }
     div.VfPpkd-xl07Ob-XxIAqe {
         background-color: #000;
@@ -16869,6 +16869,9 @@
     }
     .fWf7qe .Yalane { /* Create an assignment title */
         background-color: #111 !important; 
+    }
+    .hqfVKd { /* Create an assignment title text box */
+        color: #e5e5e5;
     }
 /*
  * TODO: Fix respond to question text field
