--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -5425,12 +5425,12 @@
         }
     }
     
-    .WOPwXe {
+    .WOPwXe { /* Agenda section headings */
         font-family: 'Google Sans', Roboto, Arial, sans-serif;
         font-size: 1.125rem;
         font-weight: 400;
         line-height: 1.5rem;
-        color: #3c4043
+        color: #788187
     }
     
     .WOPwXe-Wvd9Cc {
