--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16873,6 +16873,9 @@
     .hqfVKd { /* Create an assignment title text box */
         color: #e5e5e5;
     }
+    li.MHxtic:hover {
+        box-shadow: 0 1px 2px 0 rgb(0 0 0 / 30%), 0 2px 6px 2px rgb(0 0 0 / 15%);
+    }
 /*
  * TODO: Fix respond to question text field
  */
