Fix purple active color in class sidebar

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -12159,7 +12159,7 @@
     .Mupove .bFjUmb-Ysl7Fe,
     .Mupove.CNpREd.bFjUmb-Ysl7Fe,
     .Mupove.CNpREd .bFjUmb-Ysl7Fe {
-        background-color: #f3e8fd
+        background-color: #555
     }
     
     .Mupove.bFjUmb-Wvd9Cc,
