Fix green active class sidebar

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -11294,7 +11294,7 @@
     .WFUiUb .bFjUmb-Ysl7Fe,
     .WFUiUb.CNpREd.bFjUmb-Ysl7Fe,
     .WFUiUb.CNpREd .bFjUmb-Ysl7Fe {
-        background-color: #e6f4ea
+        background-color: #555
     }
     
     .WFUiUb.bFjUmb-Wvd9Cc,
