Fix teal active class sidebar

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -9564,7 +9564,7 @@
     .S3aLQd .bFjUmb-Ysl7Fe,
     .S3aLQd.CNpREd.bFjUmb-Ysl7Fe,
     .S3aLQd.CNpREd .bFjUmb-Ysl7Fe {
-        background-color: #e4f7fb
+        background-color: #555
     }
     
     .S3aLQd.bFjUmb-Wvd9Cc,
