Orange highlight test 2

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -8848,7 +8848,7 @@
     .g2MItd .ZoT1D:hover .idtp4e,
     .g2MItd .ZoT1D:hover.j6KDAd,
     .g2MItd .ZoT1D:hover .j6KDAd {
-        background-color: #381d00
+        background-color: #1a0d00 /*381d00*/
     }
     
     .g2MItd .OGhwGf:focus,
