--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -12308,7 +12308,7 @@
     .Mupove .ZoT1D:hover .idtp4e,
     .Mupove .ZoT1D:hover.j6KDAd,
     .Mupove .ZoT1D:hover .j6KDAd {
-        background-color: #030104 /*1d0a2e New test trying 1% L HSL*/
+        background-color: #1d0a2e
     }
     
     .Mupove .OGhwGf:focus,
