Gray highlight test

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -7983,7 +7983,7 @@
     .UvHKof .ZoT1D:hover .idtp4e,
     .UvHKof .ZoT1D:hover.j6KDAd,
     .UvHKof .ZoT1D:hover .j6KDAd {
-        background-color: #555;
+        background-color: #33353d;
     }
     
     .UvHKof .OGhwGf:focus,
