--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -7118,7 +7118,7 @@
     .ee1HBc .ZoT1D:hover .idtp4e,
     .ee1HBc .ZoT1D:hover.j6KDAd,
     .ee1HBc .ZoT1D:hover .j6KDAd {
-        background-color: #555;
+        background-color: #071d3b;
     }
     
     .ee1HBc .OGhwGf:focus,
