Green highlight hover test

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -11443,7 +11443,7 @@
     .WFUiUb .ZoT1D:hover .idtp4e,
     .WFUiUb .ZoT1D:hover.j6KDAd,
     .WFUiUb .ZoT1D:hover .j6KDAd {
-        background-color: #e6f4ea
+        background-color: #051f0e
     }
     
     .WFUiUb .OGhwGf:focus,
