Teal highlight hover test

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -9713,7 +9713,7 @@
     .S3aLQd .ZoT1D:hover .idtp4e,
     .S3aLQd .ZoT1D:hover.j6KDAd,
     .S3aLQd .ZoT1D:hover .j6KDAd {
-        background-color: #e4f7fb
+        background-color: #002124
     }
     
     .S3aLQd .OGhwGf:focus,
