--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16877,6 +16877,9 @@
         box-shadow: 0 1px 2px 0 rgb(0 0 0 / 30%), 0 2px 6px 2px rgb(0 0 0 / 15%);
         background-color: #111;
     }
+    .aSjeL.aSjeL td { /*Student assignment list background fix*/
+        background-color: #333;
+    }
 /*
  * TODO: Fix respond to question text field
  */
