Try to fix the subject in the settings

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16883,6 +16883,9 @@
     .vPNssb .jBmls { /*Wierd subject box in class settings*/
         background-color: #222;
     }
+    .fWf7qe:not(.RDPZE):hover .Yalane { /*Description box class settings?*/
+        background-color: #111;
+    }
 /*
  * TODO: Fix respond to question text field
  */
