--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -5593,7 +5593,7 @@
         font-size: 0.875rem;
         font-weight: 500;
         line-height: 1.25rem;
-        color: #3c4043
+        color: #bbb
     }
     
     .Aopndd {
