Fix selection text on class settings

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -2691,7 +2691,7 @@
         font-weight: 400;
         letter-spacing: .2px;
         line-height: 20px;
-        color: #202124;
+        color: #bbb;
         max-width: 280px;
         min-width: 112px;
         padding-right: 48px
