Class settings highlight menu option

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -12604,7 +12604,7 @@
     .Mupove .NqFm6:not(.RDPZE) .tWfTvb [role=option][aria-selected=true],
     .Mupove .ybOdnf:not(.RDPZE).iWO5td,
     .Mupove .ybOdnf:not(.RDPZE) .OA0qNb .LMgvRb[aria-selected=true] {
-        background-color: #f3e8fd
+        background-color: #111
     }
     
     .Mupove .RpYYWb:not(.RDPZE).fy1E5c .Ce1Y1c {
