Menu highlight classroom settings

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -2571,7 +2571,7 @@
     }
     
     .ncFHed .MocG8c.KKjvXb {
-        background-color: #eeeeee;
+        background-color: #111;
         border-style: dotted;
         border-width: 1px 0;
         outline: 1px solid transparent;
@@ -12604,7 +12604,7 @@
     .Mupove .NqFm6:not(.RDPZE) .tWfTvb [role=option][aria-selected=true],
     .Mupove .ybOdnf:not(.RDPZE).iWO5td,
     .Mupove .ybOdnf:not(.RDPZE) .OA0qNb .LMgvRb[aria-selected=true] {
-        background-color: #111
+        background-color: #1d0a2e
     }
     
     .Mupove .RpYYWb:not(.RDPZE).fy1E5c .Ce1Y1c {
