Ris priority problem

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16893,7 +16893,7 @@
         background-color: #111;
     }
     .uRr8Jb:not(.RDPZE) .snByac { /*Class settings manage invite codes*/
-        color: #bbb;
+        color: #bbb !important;
     }
 
 /*
