--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -1739,13 +1739,13 @@
         box-shadow: 0 3px 5px -1px rgba(26, 115, 232, 0.2), 0 6px 10px 0 rgba(26, 115, 232, 0.141), 0 1px 18px 0 rgba(26, 115, 232, 0.122)
     }
     
-    .GJYBjd {
+    .GJYBjd { /*Manage invite codes choice list background*/
         position: absolute;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
-        background-color: #5f6368;
+        background-color: #bbb;
         opacity: 0
     }
     
