Background color for invite code manager

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -1745,7 +1745,7 @@
         right: 0;
         bottom: 0;
         left: 0;
-        background-color: #bbb;
+        background-color: #e5e5e5;
         opacity: 0
     }
     
