--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -631,8 +631,8 @@
     
     .Y5sE8d.RDPZE,
     .YhQJj.RDPZE,
-    .An19kf.RDPZE {
-        background: rgba(0, 0, 0, 0.12)
+    .An19kf.RDPZE { /*Class settings save button unavailable*/
+        background: rgba(255, 255, 255, 0.12)
     }
     
     .l4V7wb {
