--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -631,7 +631,7 @@
     
     .Y5sE8d.RDPZE,
     .YhQJj.RDPZE,
-    .An19kf.RDPZE { /*Class settings save button unavailable*/
+    .An19kf.RDPZE { /*Class settings save button unavailable background*/
         background: rgba(255, 255, 255, 0.12)
     }
     
