Try to fix pink hover highlight

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -10578,7 +10578,7 @@
     .zvzLKc .ZoT1D:hover .idtp4e,
     .zvzLKc .ZoT1D:hover.j6KDAd,
     .zvzLKc .ZoT1D:hover .j6KDAd {
-        background-color: #fde7f3
+        background-color: #14010c
     }
     
     .zvzLKc .OGhwGf:focus,
