Maybe fix assignee view tile?

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16895,7 +16895,11 @@
     .uRr8Jb:not(.RDPZE) .snByac { /*Class settings manage invite codes*/
         color: #bbb !important;
     }
+    .hYt5f.EfvGO .WkZsyc { /*All student view background */
+        background-color: #151515;
+    }
 
 /*
  * TODO: Fix respond to question text field
+ * NOTE: Background is #222
  */
