--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16895,7 +16895,7 @@
     .uRr8Jb:not(.RDPZE) .snByac { /*Class settings manage invite codes*/
         color: #bbb !important;
     }
-    .hYt5f.EfvGO .WkZsyc { /*All student view background */
+    div.hYt5f.EfvGO div.WkZsyc { /*All student view background */
         background-color: #151515;
     }
 
