--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -16898,8 +16898,8 @@
     div.hYt5f.EfvGO div.WkZsyc { /*All student view background */
         background-color: #151515;
     }
-    .lXuxY, .pO6AMc, .PqkECe { /*Classwork expanded assignment shadow */
-        box-shadow: 0 1px 2px 0 rgba(0,0,0,0.3),0 2px 6px 2px rgba(0,0,0,0.15);
+    lXuxY, pO6AMc, PqkECe { /*Classwork expanded assignment shadow */
+        box-shadow: 0 1px 2px 0 rgba(0,0,0,0.3),0 2px 6px 2px rgba(0,0,0,0.15) !important;
     }
 
 /*
