Fix weird classword tab hover behavior

--- a/CustomTheme.css
+++ b/CustomTheme.css
@@ -7972,7 +7972,7 @@
     .UvHKof .ZoT1D :focus-within.boxOzd,
     .UvHKof .ZoT1D:focus-within.idtp4e,
     .UvHKof .ZoT1D :focus-within.idtp4e {
-        background-color: #555;
+        background-color: #33353d;
     }
     
     .UvHKof .tUJKGd:not(.xp2dJ):not(.rZXyy):hover.idtp4e,
